# Algo-Trader-Elite

./: .replit  pyproject.toml  replit.md  start.sh
backend/: app.py  config.py
backend/routes/: broker.py  scanner.py  trades.py
backend/services/: openalgo_service.py  scanner_service.py  trade_manager.py
deploy/: algotrader-backend.service
deploy/deploy/: install-systemd-service.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  Positions.tsx  Scanner.tsx  Settings.tsx  TradeConfirmation.tsx  TradeHistory.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
